# web-scraper

./: README.md  pyproject.toml
web_scraper/: scraper.py  web_scraper.py
