[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["KIMBERLY DAMALAS <kimatcamp@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
